--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-commonjs": "22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "8.3.4",
+    "rollup": "2.78.0",
     "tslib": "2.4.0",
     "typescript": "4.7.4"
   }
